doc: add link to public repo

--- a/doc/MRScpOptSize.tex
+++ b/doc/MRScpOptSize.tex
@@ -115,7 +115,8 @@ of Klyuchnikov et al. \cite{KlyuchnikovMRSCBranch,Klyuchnikov:META2012:MRSC}:
     performing efficiently some kinds of queries on this set.
 \end{itemize}
 The compact representation of the set of graphs is shown in Fig. \ref{fig:GraphSet}.
-We use direct excerpts of the F\# code of the implementation, but hopefully
+We use direct excerpts of the F\# code of the implementation\footnote{Available at
+\url{https://github.com/dkrustev/MRScpOptSize}}, but hopefully
 they will be readable by anyone familiar with other functional languages such as OCaml or Haskell.
 Another important caveat is that we have implemented MRSC for programs in a specific language,
 so some details will only become clear once we introduce this language.
