--- a/doc/MRScpOptSize.tex
+++ b/doc/MRScpOptSize.tex
@@ -189,7 +189,8 @@ let rec private mrScpRec (defs: Defs) (nestLvl: int) (hist:
         let confss = rs |> List.map (fun mdsr -> 
           mdsrSubExps mdsr |> List.map (fun e -> (mdsr, e)))
         let newHist = (hek, nestLvl, e)::hist
-        GSBuild(conf, List.map (List.map (mrScpRec defs (nestLvl + 1) newHist)) confss)
+        GSBuild(conf, 
+          List.map (List.map (mrScpRec defs (nestLvl + 1) newHist)) confss)
 
 let mrScp (defs: Defs) (e: Exp) : GraphSet =
   mrScpRec defs 0 [] (MDSRUnfold e, e)
@@ -277,8 +278,8 @@ type DriveStepResult =
   \item We cannot drive a variable any further: $\mathtt{drive} \llbracket x \rrbracket = \mathtt{DSRNone}$;
   \item Driving a constructor results in a constructor node with all arguments available for
     further driving: $\mathtt{drive} \llbracket C(e_1, \ldots, e_n) \rrbracket = \mathtt{DSRCon}(C, e_1, \ldots, e_n)$;
-  \item If we stumble upon a call to an ordinary function, we simply unfold its definition:
-    $\mathtt{drive} \llbracket f(e_1, \ldots, e_n) \rrbracket = \mathtt{DSRUnfold}(e [ x_1\rightarrow e_1, \ldots, x_n\rightarrow e_n ])$,
+  \item If we stumble upon a call to an ordinary function, we simply unfold its definition: \\
+    $\mathtt{drive} \llbracket f(e_1, \ldots, e_n) \rrbracket$ $=$ $\mathtt{DSRUnfold}(e [ x_1\rightarrow e_1, \ldots, x_n\rightarrow e_n ])$,
     where $f(x_1, \ldots, x_n) = e \in P$ and $e [ x_1\rightarrow e_1, \ldots, x_n\rightarrow e_n ] $
     denotes simultaneous substitution;
   \item The most interesting cases concern a call to a pattern-matching function, as the situation is
@@ -368,46 +369,47 @@ let mdsrSubExps (mdsr: MultiDriveStepResult) : list<Exp> =
 \end{figure}
 
 \begin{itemize}
-  \item The variable case is again trivial: $\mathtt{mrdrive} \llbracket x \rrbracket = [\mathtt{MDSRLeaf}(x)]$;
+  \item The variable case is again trivial: \\
+    $\mathtt{mrdrive} \llbracket x \rrbracket = [\mathtt{MDSRLeaf}(x)]$;
     (We use $[\ldots; \ldots; \ldots]$ to denote lists of results.)
   \item There is no code duplication when driving a constructor, so we again make no generalization: 
     $\mathtt{mrdrive} \llbracket C(e_1, \ldots, e_n) \rrbracket = [\mathtt{MDSRCon}(C, e_1, \ldots, e_n)]$;
   \item The unfolding of a call to an ordinary function can produce code duplication, if some arguments appear
     multiple times in the body of the definition. 
-    We conservatively generalize all arguments of the call\footnote{We leave a more refined generalization treatment for future work}:
+    We conservatively generalize all arguments of the call\footnote{We leave a more refined generalization treatment for future work}: \\
     $\mathtt{mrdrive} \llbracket f(e_1, \ldots, e_n) \rrbracket =$ 
-      $[\mathtt{MDSRLet}(y_1=e_1, \ldots, y_n=e_n, e [ x_1\rightarrow y_1, \ldots, x_n\rightarrow y_n ]); $
+      $[\mathtt{MDSRLet}(y_1=e_1, \ldots, y_n=e_n, e [ x_1\rightarrow y_1, \ldots, x_n\rightarrow y_n ]); $ \\
       $\mathtt{MDSRUnfold}(e [ x_1\rightarrow e_1, \ldots, x_n\rightarrow e_n ])]$,
     where $y_1, \ldots, y_n$ are fresh and $f(x_1, \ldots, x_n) = e \in P$.
     Notice that we shall always place the generalization result before the driving result in the list.
     In this way, supercompiled programs produced earlier will have more generalizations;
   \item The case of a pattern-matching call with a known constructor is completely
-    analogous to the previous one:
+    analogous to the previous one: \\
     $\mathtt{mrdrive} \llbracket g(C(e'_1, \ldots, e'_m), e_1, \ldots, e_n) \rrbracket = [$
-    $\mathtt{MDSRLet}(u_1=e'_1, \ldots, u_m=e'_m, z_1=e_1, \ldots, z_n=e_n, e [ x_1\rightarrow u_1, \ldots, x_m\rightarrow u_m, y_1 \rightarrow z_1, \ldots, y_n \rightarrow z_n ]);$
+    $\mathtt{MDSRLet}(u_1=e'_1, \ldots, u_m=e'_m, z_1=e_1, \ldots, z_n=e_n, e [ x_1\rightarrow u_1, \ldots, x_m\rightarrow u_m, y_1 \rightarrow z_1, \ldots, y_n \rightarrow z_n ]);$ \\
     $\mathtt{MDSRUnfold}(e [ x_1\rightarrow e'_1, \ldots, x_m\rightarrow e'_m, y_1 \rightarrow e_1, \ldots, y_n \rightarrow e_n ])]$
     where $u_1, \ldots, u_m, z_1, \ldots, z_n$ are fresh and $g(C(x_1, \ldots, x_m), y_1, \ldots, y_n) \in P$;
   \item When we pattern-match on a variable, there can be some code duplication during
     information propagation. 
     The code potentially being duplicated, however, is always of the form $C(x_1, \ldots, x_n)$.
-    We have currently decided to accept this limited form of potential duplication, without adding a generalization:
+    We have currently decided to accept this limited form of potential duplication, without adding a generalization: \\
     $\mathtt{mrdrive} \llbracket g(x, e_1, \ldots, e_n) \rrbracket =$
     $[\mathtt{MDSRCases}(x, \mathtt{propagate}(x, p_1, (e_1, \ldots, e_n), e'_1),$ $\ldots,$ \\
     $\mathtt{propagate}(x, p_m, (e_1, \ldots, e_n), e'_m))]$
     where $g(p_1, y_1, \ldots, y_n) = e'_1, \ldots, g(p_m, y_1, \ldots, y_n) = e'_m \in P$;
-    
   \item The case of matching on a function call is perhaps the least obvious. 
     As during normal driving we reuse the result of driving the nested call, it is not statically clear what
     it will be.
-    So we prefer to be conservative, and add a full generalization of the outer call here:
+    So we prefer to be conservative, and add a full generalization of the outer call here: \\
     $\mathtt{mrdrive} \llbracket g(f(e'_1, \ldots, e'_m), e_1, \ldots, e_n) \rrbracket =$
-    $[\mathtt{MDSRLet}(x_0=f(e'_1, \ldots, e'_m), x_1=e_1, \ldots, x_n=e_n, g(x_0, \ldots, x_n));$ \\
+    $[\mathtt{MDSRLet}$ $(x_0=f(e'_1, \ldots, e'_m), x_1=e_1, \ldots, x_n=e_n,$ \\
+    $g(x_0, \ldots, x_n));$ 
     $\mathtt{mdsrMap}(\llbracket g(\bullet, e_1, \ldots, e_n) \rrbracket, \mathtt{mrdrive} \llbracket f(e'_1, \ldots, e'_m) \rrbracket)]$
     where $x_0, \ldots, x_n$ are, as usual, fresh.
 \end{itemize}
 
 To illustrate the process on a very simple example, consider the trivial program 
-$P = \{ \mathtt{f(x,y)=Pair(x,y);} \}$. 
+$P$ $=$ $\{$ \verb|f(x,y)| \verb|=| \verb|Pair(x,y);| $\}$. 
 If we supercompile the expression \verb|f(A,B)|, we shall obtain the graph set shown in Fig. \ref{fig:TrivGraphSet},
 which corresponds to 2 configuration graphs -- one with generalization, and one without.
 
@@ -585,7 +587,7 @@ Several interesting observations stem from analyzing the selected resulting prog
     symmetry of Boolean equality -- Fig. \ref{fig:BoolEqSymResult}.
   \item The results of ``exp growth'' are especially interesting in view of our main goal.
     The last result is the same as produced by S{\o}rensen's supercompiler --
-    \verb|B(B(B(z, z), B(z, z)), B(B(z, z), B(z, z)))| -- clearly suffering form code-size explosion.
+    \verb|B(B(B(z, z), B(z, z)), B(B(z, z),| \verb|B(z, z)))| -- clearly suffering form code-size explosion.
     The minimum-size (and also first) program -- shown in Fig. \ref{fig:ExpGrowthMinResult} --
     avoids the pitfall of code-size explosion, thanks to generalization.
     It, however, has also missed some opportunities for static evaluation.
@@ -777,7 +779,7 @@ after unfolding.
 \appendix
 
 \clearpage
-\section{Selecting Graphs from a $\mathtt{GraphSet}$}\label{app:FilterGraphSet}
+\section{Selecting Graphs from a \texttt{GraphSet}}\label{app:FilterGraphSet}
 
 \begin{lstlisting}[caption={Selecting a Graph of Minimum/Maximum Size from a Graph Set}]
 let rec minMaxSizeGraph (cmp: int -> int -> bool) (g: GraphSet) : int * GraphSet =
