working on improvements suggested by reviewers

--- a/doc/MRScpOptSize.bib
+++ b/doc/MRScpOptSize.bib
@@ -22,6 +22,23 @@ isbn={978-5-901795-31-6},
 url={http://meta2014.pereslavl.ru/papers/2014_Grechanik_Klyuchnikov_Romanenko__Staged_Multi-Result_Supercompilation__Filtering_by_Transformation.pdf},
 }
 
+@inproceedings{10.1145/1244381.1244391,
+author = {Hamilton, G. W.},
+title = {Distillation: Extracting the Essence of Programs},
+year = {2007},
+isbn = {9781595936202},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1244381.1244391},
+doi = {10.1145/1244381.1244391},
+booktitle = {Proceedings of the 2007 ACM SIGPLAN Symposium on Partial Evaluation and Semantics-Based Program Manipulation},
+pages = {61–70},
+numpages = {10},
+keywords = {superlinear improvement, termination, generalisation, tail-recursion, program transformation},
+location = {Nice, France},
+series = {PEPM ’07}
+}
+  
 @article{Hamilton07,
 	added-at = {2016-01-13T00:00:00.000+0100},
 	author = {Hamilton, Geoff W.},
